syntax = "proto2";

package opentxs.proto;
option java_package = "org.opentransactions.proto";
option java_outer_classname = "OTPairEvent";
option optimize_for = LITE_RUNTIME;

import public "ZMQEnums.proto";

message PairEvent
{
    optional uint32 version = 1;
    optional PairEventType type = 2;
    optional string issuer = 3;
}
